# fastapi_boilerplate

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  pipeline.yml  test.yml
fastapi_boilerplate/: app.py
fastapi_boilerplate/core/: auth.py  database.py  security.py  settings.py
fastapi_boilerplate/crud/: users.py
fastapi_boilerplate/models/: __init__.py  users.py
fastapi_boilerplate/routers/: auth.py  health.py  users.py
fastapi_boilerplate/schemas/: auth.py  pagination.py  users.py
fastapi_boilerplate/utils/: pagination.py
migrations/: env.py
migrations/versions/: 20609b62aa2d_create_category.py  33df56f907f4_create_users_table.py  3a710d40783d_create_users_table.py  7fa23b76ae80_create_category.py  be3b9091fc1f_create_category.py  c89bcd65df33_create_category.py  ed0386ec98d1_create_category.py
tests/: conftest.py  test_app.py  test_auth.py  test_users.py
